# tabi-rop

./: .gitlab-ci.yml  README.md  docker-compose.yml  docker-compose_dev.yml  package-lock.json
backend/: .dockerignore  .gitignore  .gitlab-ci.yml  .pylintrc  Dockerfile  Dockerfile_dev  LICENSE  README.md  app.py  gunicorn.sh  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
backend/backend_proxy/api/: endpoints.py  exception.py
backend/backend_proxy/containerization/: service.py
backend/backend_proxy/db/: mongoDB.py
backend/backend_proxy/misc/: conllXtostandoff.py  uiSchema.py  util.py
backend/backend_proxy/tool/: schema.py  service.py  toolClass.py
backend/backend_proxy/tool/formats/: formatAbstractClass.py  listOfListOfMorphFeatList.py  rawSentence.py  supportedFormats.py  tokenizedSentence.py
backend/backend_proxy/user/: service.py
backend/src/backend/: app.py
backend/src/backend/backend_proxy/: config_example.py
backend/src/backend/backend_proxy/api/: endpoints.py  exception.py
backend/src/backend/backend_proxy/containerization/: service.py
backend/src/backend/backend_proxy/db/: mongoDB.py
backend/src/backend/backend_proxy/feedback/: feedback_class.py  schema.py  service.py
backend/tests/: conftest.py
backend/tests/dockerService/: test_docker_singleton.py
backend/tests/toolService/: mock_tool_class.py  mock_tool_controller.py  test_add_tool.py  test_list_tools.py  test_run_tool.py
backend/tests/userService/: mock_user_controller.py  test_get_tools.py  test_login.py  test_register.py
frontend/: .env  (+9 more)
(+151 files in other folders)
