[metadata]
name = backend
description = Backend for Boun DIP system
author = Muhammet Şen
license = MIT
license_file = LICENSE
platforms = linux
classifiers =
    Programming Language :: Python :: 3.9

[options]
packages =
    backend 
install_requires =
    Flask>=1.1.1
    pymongo>=3.7.2
    marshmallow>=3.9.1
    flask_cors>=3.0.7
    Flask-OIDC>=1.4.0
    requests>=2.22.0
    pytest>=5.2.1
    gunicorn>=20.1.0
    bcrypt>=3.2.0
    docker>=5.0.0
    six>=1.16.0
python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910

[options.package_data]
backend=py.typed 